@@ -74,11 +74,15 @@ void pidgin_plugins_save(void);
 
 /**
  * Shows the Plugins dialog
+ *
+ * @deprecated Use pidgin_plugin_dialog_show_with_parent() instead.
  */
 void pidgin_plugin_dialog_show(void);
 
 /**
  * Shows the Plugins dialog, transient to a parent window
+ *
+ * @since 2.3.0
  */
 void pidgin_plugin_dialog_show_with_parent(GtkWindow *parent);
 
